web-infras/parser/tests/fixtures/babel/es2015/modules/duplicate-named-export-destructuring8/output.txt
[SyntaxError]: 'import' and 'export' may appear only with 'sourceType: "module"' (1,1)
1|export class Foo {};
 |^
[SyntaxError]: 'import' and 'export' may appear only with 'sourceType: "module"' (2,1)
2|export const { Foo } = bar;
 |^
[SyntaxError]: Identifier has already been declared. (2,16)
2|export const { Foo } = bar;
 |              ^
[SyntaxError]: Identifier has already been declared. (2,16)
2|export const { Foo } = bar;
 |              ^
